# synthos-ml-backend

./: .coverage  .env.example  .gcloudignore  .gitignore  API_COMPLIANCE_REPORT.md  ARCHITECTURE.md  CONTRIBUTING.md  CPU_VALIDATION_COMPLETE.md  DEVELOPER_GUIDE.md  DS_Store  Dockerfile  GO_BACKEND_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE_FINAL.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  INTEGRATION_COMPLETE.md  ML_BACKEND_DEPLOYMENT_SUCCESS.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE_2_3_COMPLETE_SUMMARY.md  README.md  RESONANCE_NN_INTEGRATION.md  SECURITY_AUDIT_REPORT.md  cloudbuild-api-rebuild.yaml  cloudbuild-data.yaml  cloudbuild-ml.yaml  cloudbuild-orchestrator.yaml  cloudbuild.yaml  demo_full_pipeline.py  docker-compose.yml  fix_all_issues.py  patch-api-promo.yaml  patch-api.yaml  patch-ml.yaml  quick_fix_orchestrator.py  requirements.txt  resonance_nn-0.1.0-py3-none-any.whl  run_tests.sh  setup.sh  synthos-ml-key.pem  synthos-strategic-plan.md  (+16 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  gcp-deploy.yml  production-deploy.yml  synthos-kernel-ci.yml  tests.yml
admin_dashboard/: Dockerfile  go.mod  main.go
admin_dashboard/views/: dashboard.html
collapse_service/: Dockerfile  collapse_pb2.py  collapse_pb2_grpc.py  server.py
collapse_service/collapse_engine/: __init__.py  detector.py  recommender.py  recommender_advanced.py  signature_library.py  signature_library_advanced.py
collapse_service/data_processors/: __init__.py
collapse_service/storage/: local_provider.py  storage_provider.py
collapse_service/tests/: test_recommender_advanced.py  test_signature_library_advanced.py
config/: hardware_config.yaml
data_service/: Dockerfile  go.mod  main.go
docs/: ARCHITECTURE.md  DATA_FLOW.md  DISTRIBUTION_README.md  GCP_H100_DEPLOYMENT.md  IMPLEMENTATION_STATUS.md  INSTALLATION_GUIDE.md  INTEGRATION_SUMMARY.md  MODULE_INTEGRATION.md  QUICKREF_UNIFIED.md  QUICK_REFERENCE.md  QUICK_START.md  synthos-api-architecture.md
go_backend/: .env.example  Dockerfile  Dockerfile.production  GO_BACKEND_IMPLEMENTATION.md  README.md  go.mod  go.sum
go_backend/migrations/: 000003_add_tickets_invites.down.sql  000003_add_tickets_invites.up.sql
go_backend/scripts/: pre-deploy-check.sh
go_backend/tests/: handlers_test.go  integration_test.go
job_orchestrator/: Dockerfile  Dockerfile.production  go.mod  go.sum  main.go
k8s/: ml-backend-deployment.yaml
migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  000002_add_credits_system.down.sql  000002_add_credits_system.up.sql  000002_add_profile_fields.down.sql  000002_add_profile_fields.up.sql  000002_auth_security_features.down.sql  000002_auth_security_features.up.sql
ml_backend/: .ruff.toml  Dockerfile  Dockerfile.cloudrun  Dockerfile.production  LICENSE  Makefile  PRODUCTION_IMPROVEMENTS.md  README.md  RESONANCE_NN_INTEGRATION.md  RUNPOD_DEPLOYMENT.md  TESTING_GUIDE.md  api_compliant_output_example.json  pyproject.toml  requirements.txt  run_tests.sh  server.py  server_production.py
ml_backend/.github/workflows/: ci.yml
ml_backend/config/: aws_gpu_instances.yaml  hardware_config.yaml  ml_config.yaml  storage_config.yaml
ml_backend/data/signatures_test/: signatures_advanced.h5
ml_backend/deployment/systemd/: synthos-validator.service
ml_backend/docs/: ARCHITECTURE.md  DATA_FLOW.md  README.md  UNIFIED_PIPELINE.md  UNIFIED_SYSTEM.md  synthos-api-architecture.md  synthos-strategic-plan.md  synthos-validation-method.md
ml_backend/examples/: complete_pipeline.py  unified_pipeline_simple.py
ml_backend/proto/: validation.proto
ml_backend/scripts/: bootstrap_gpu.sh  deploy_runpod.sh  load_secrets.py
ml_backend/src/: __init__.py  model_architectures.py  orchestrator.py
ml_backend/src/collapse_engine/: __init__.py  detector.py  localizer.py  recommender.py  recommender_advanced.py  signature_library.py  signature_library_advanced.py
ml_backend/src/connections/: __init__.py  db.py
ml_backend/src/data_processors/: dataset_loader.py
ml_backend/src/grpc_services/: __init__.py  job_orchestrator_client.py  job_orchestrator_pb2_grpc.py  validation_pb2_grpc.py  validation_server.py  validation_server_complete.py
ml_backend/src/storage/: __init__.py  factory.py  s3_provider.py
ml_backend/src/synthos_kernel/: CMakeLists.txt  Makefile  README.md  __init__.py  arch_dispatch.cuh  benchmark_architectures.py  detector.py.patch  python_wrapper.py  spectral.cu  spectral.h  test_spectral.py
ml_backend/src/synthos_kernel/kernels/: spectral_sm60.cuh  spectral_sm70.cuh  spectral_sm80.cuh  spectral_sm90.cuh
ml_backend/src/utils/: error_handling.py  gpu_auto_config.py  gpu_optimizer.py
ml_backend/src/validation_engine/: __init__.py  cascade_trainer.py  diversity_analyzer.py
ml_backend/tests/: conftest.py  test_collapse_determinism.py
ml_backend/tests/integration/: test_full_pipeline.py  test_orchestrator_cpu_smoke.py  test_orchestrator_negative_cases.py
ml_backend/tests/load/: test_load.py
ml_backend/tests/unit/: test_cascade_trainer.py  test_collapse_detector.py  test_dataset_loader.py  test_diversity_analyzer.py  test_localizer.py  test_model_architectures.py  test_orchestrator.py  test_package_sanity.py  test_recommender.py  test_signature_library.py  test_storage_providers.py  test_utils.py
monitoring/: prometheus.yml
proto/: collapse.proto  data.proto  job_orchestrator.proto  orchestrator.proto  validation.proto
scripts/: deploy.sh  generate_certs.sh  init-db.sql  schema.sql  start.sh  verify_production.sh
scripts/aws/: phase1-foundation.sh  phase2-gpu-node.sh  phase3-ecs-fargate.sh
scripts/gcp/: deploy-cloud-run.sh  setup-infrastructure.sh
src/: __init__.py  model_architectures.py  model_architectures.py.bak  orchestrator.py
src/collapse_engine/: __init__.py  detector.py  recommender.py  signature_library.py
src/data_processors/: dataset_loader.py
src/grpc_services/: job_orchestrator_pb2.py  validation_pb2.py  validation_pb2_grpc.py  (+2 more)
validation_service/: Dockerfile  requirements.txt  server.py  validation_pb2.py  validation_pb2_grpc.py
(+96 files in other folders)
